Databases Tab: Correct DB Filter, (shifting if 1-2 queries filtered)

--- a/Universe.SqlServerQueryCache/Exporter/Tabs-Playground/Tabs-Styles.scss
+++ b/Universe.SqlServerQueryCache/Exporter/Tabs-Playground/Tabs-Styles.scss
@@ -102,7 +102,7 @@ $border-line-active: 4px;
     }
 
     border-radius: 8px;
-    padding: 0;
+    padding: 10px 0 0 0;
     /* links */
     &__pills {
         width: fit-content;
